# icecream

./: CMakeLists.txt
client/: CMakeLists.txt
client/src/: arg.cpp  arg.hh  argv.cpp  argv.h  argv.hh  call_cpp.cpp  call_cpp.hh  client_util.cpp  client_util.hh  local.cpp  local.hh  main.cpp  md5.h  remote.cpp  remote.hh  safeguard.cpp  safeguard.hh
compilerwrapper/: CMakeLists.txt
compilerwrapper/src/: compilerwrapper.cpp
create-env/: CMakeLists.txt
daemon/: CMakeLists.txt
daemon/src/: daemon_exception.hh  environment.cpp  environment.hh  file_util.cpp  file_util.hh  load.cpp  load.hh  main.cpp  serve.cpp  serve.hh  workit.cpp  workit.hh
extensions/: CMakeLists.txt
extensions/include/: extensions.hh  make_array.hh  optional.hh  string_view.hh  variant.hh  visitor.hh
scheduler/: CMakeLists.txt
scheduler/src/: compileserver.cpp  compileserver.hh  jobstat.cpp  jobstat.hh  main.cpp  scheduler_job.cpp  scheduler_job.hh
services/: CMakeLists.txt
services/include/: bytes.hh  comm.hh  exitcode.h  getifaddrs.hh  ggc.hh  logging.hh  ncpus.h  pipes.h  platform.hh  services_job.hh  services_util.hh  tempfile.h  tempfile.hh
services/src/: bytes.cpp  comm.cpp  getifaddrs.cpp  ggc.cpp  logging.cpp  platform.cpp  services_job.cpp  services_util.cpp  tempfile.cpp  type_id.hh
tests/: includes-without.cpp  includes.cpp
